mutiple image upload

--- a/src/less/index.less
+++ b/src/less/index.less
@@ -524,3 +524,9 @@
         color: transparent;
     }
 }
+.authen-status-1 {
+    color: @brand-success;
+}
+.authen-status-2 {
+    color: @brand-warning;
+}
