--- a/src/less/uploader.less
+++ b/src/less/uploader.less
@@ -64,4 +64,17 @@
 		background-image: url("../images/remove.png");
 		background-size: 100%;
 	}
+	.preview-btn {
+		display: block;
+		width: 100%;
+		height: 130px;
+		line-height: 130px;
+		border: 1px solid @brand-primary;
+		background-color: @gray-lighter;
+	}
+	.progress {
+		background-color: transparent;
+		box-shadow: none;
+		-webkit-box-shadow:none;
+	}
 }
