--- a/src/templates/category.html
+++ b/src/templates/category.html
@@ -9,6 +9,6 @@
 </div>
 <div class="location-footer">
     <div class="btn-group justified">
-        <span class="btn btn-primary rectangle" ng-click="reset_category()">重置</span>
+        <span class="btn btn-primary rectangle" ng-click="reset_category()">{{"Reset" | translate}}</span>
     </div>
 </div>
