--- a/src/templates/language.html
+++ b/src/templates/language.html
@@ -8,7 +8,7 @@
 </div>
 <div class="language-footer">
     <div class="btn-group justified">
-        <span class="btn bg-gray-lighter text-primary rectangle" ng-click="reset_language()">重置</span>
+        <span class="btn bg-gray-lighter text-primary rectangle" ng-click="reset_language()">{{"Reset" | translate}}</span>
         <span class="btn btn-warning rectangle" ng-click="choose_language()">{{"Confirm" | translate}}</span>
     </div>
 </div>
