--- a/src/templates/location.html
+++ b/src/templates/location.html
@@ -17,6 +17,6 @@
 </div>
 <div class="location-footer">
     <div class="btn-group justified">
-        <span class="btn btn-primary rectangle" ng-click="reset_location()">重置</span>
+        <span class="btn btn-primary rectangle" ng-click="reset_location()">{{"Reset" | translate}}</span>
     </div>
 </div>
