--- a/src/templates/release_task.html
+++ b/src/templates/release_task.html
@@ -311,7 +311,7 @@
                 </div> -->
                 <div class="modal-footer text-center">
                     <a ng-href="#/recommands?task_id={{task_id}}" class="btn btn-primary" ng-if="recommands > 0">{{"Our Recommendations" | translate}}</a>
-                    <button class="btn btn-default" ng-click="close()">关闭</button>
+                    <button class="btn btn-default" ng-click="close()">{{"Close" | translate}}</button>
                 </div>
             </div>
         </div>
