--- a/src/templates/translators.html
+++ b/src/templates/translators.html
@@ -38,7 +38,7 @@
                 {{translator.nickname}}
                 </span>
             <span class="block">{{translator.return_language}}</span>
-            <span class="block">长期居住地：{{translator.address}}</span>
+            <span class="block">{{"Place" | translate}}：{{translator.address}}</span>
             <span class="block text-ellipsis">{{translator.introduction}}</span>
             </span>
         </a>
