--- a/src/templates/apply_flow.html
+++ b/src/templates/apply_flow.html
@@ -1,5 +1,5 @@
 <!-- by dribehance <dribehance.kksdapp.com> -->
-<div ui-content-for="title">申请悠译人</div>
+<div ui-content-for="title">{{"Apply Youyi translator" | translate}}</div>
 <div ui-content-for="navbarAction"></div>
 <div ui-content-for="backAction">
 	<span class="btn" ng-click="back()"><i class="fa fa-chevron-left"></i></span>
@@ -39,15 +39,15 @@
                         <!-- begin -->
                         <div class="semi-auto semi-left-80">
                             <div class="semi-fixed-left text-center semi-wide-80">
-                                <span class="btn section-wide text-ellipsis">开始时间</span>
+                                <span class="btn section-wide text-ellipsis">{{"Start Date" | translate}}</span>
                             </div>
                             <div>
                                 <div class="row">
                                     <div class="col-xs-7 section-wide">
-                                        <input type="text" class="youyi-date form-control col-xs-8" name="from_date" pick-a-date="input.from_date" pick-a-date-options="input.from_date_options" placeholder="请选择" required>
+                                        <input type="text" class="youyi-date form-control col-xs-8" name="from_date" pick-a-date="input.from_date" pick-a-date-options="input.from_date_options" placeholder="{{'Please choose'| translate}}" required>
                                     </div>
                                     <div class="col-xs-5 section-wide">
-                                        <input type="text" class="youyi-time form-control col-xs-4" name="from_time" pick-a-time="input.from_time" pick-a-time-options="input.time_options" placeholder="请选择" required>
+                                        <input type="text" class="youyi-time form-control col-xs-4" name="from_time" pick-a-time="input.from_time" pick-a-time-options="input.time_options" placeholder="{{'Please choose'| translate}}" required>
                                     </div>
                                 </div>
                             </div>
@@ -55,15 +55,15 @@
                         <!-- end -->
                         <div class="semi-auto semi-left-80">
                             <div class="semi-fixed-left text-center semi-wide-80">
-                                <span class="btn section-wide text-ellipsis">结束时间</span>
+                                <span class="btn section-wide text-ellipsis">{{"End Date" | translate}}</span>
                             </div>
                             <div>
                                 <div class="row">
                                     <div class="col-xs-7 section-wide">
-                                        <input type="text" class="youyi-date form-control col-xs-8" name="to_date" pick-a-date="input.to_date" pick-a-date-options="input.to_date_options" placeholder="请选择" required>
+                                        <input type="text" class="youyi-date form-control col-xs-8" name="to_date" pick-a-date="input.to_date" pick-a-date-options="input.to_date_options" placeholder="{{'Please choose'| translate}}" required>
                                     </div>
                                     <div class="col-xs-5 section-wide">
-                                        <input type="text" class="youyi-time form-control col-xs-4" name="to_time" pick-a-time="input.to_time" pick-a-time-options="input.to_time_options" placeholder="请选择" required>
+                                        <input type="text" class="youyi-time form-control col-xs-4" name="to_time" pick-a-time="input.to_time" pick-a-time-options="input.to_time_options" placeholder="{{'Please choose'| translate}}" required>
                                     </div>
                                 </div>
                             </div>
@@ -79,7 +79,7 @@
                             </div>
                         </div>
                         <div>
-                            <input type="text" class="form-control youyi-flat-input text-right" name="title" ng-model="input.title" required placeholder="请输入标题">
+                            <input type="text" class="form-control youyi-flat-input text-right" name="title" ng-model="input.title" required placeholder="{{'Please fill title' | translate}}">
                         </div>
                         <!-- <div class="semi-fixed-right semi-wide-40">
                             <span class="btn"><i class="fa fa-chevron-right text-gray-light"></i></span>
@@ -115,7 +115,7 @@
                             <span class="semi-fixed-left semi-wide-40 text-center">
                                 <i class="kk kk-25 kk-checked" ng-class="{'active':input.price !=''}"></i>
                             </span>
-                            <input type="number" class="form-control rectangle youyi-flat-input text-right" name="price" ng-model="input.price" placeholder="请填写" required>
+                            <input type="number" class="form-control rectangle youyi-flat-input text-right" name="price" ng-model="input.price" placeholder="{{'Please fill in' | translate}}" required>
                             <span class="semi-fixed-right semi-wide-40 text-center">
                                 <span class="btn">/{{"Day" | translate}}</span>
                             </span>
@@ -148,7 +148,7 @@
                             </div>
                         </div>
                         <div>
-                            <input type="text" class="form-control youyi-flat-input text-right" name="content" ng-model="input.content" required placeholder="请填写">
+                            <input type="text" class="form-control youyi-flat-input text-right" name="content" ng-model="input.content" required placeholder="{{'Please fill in' | translate}}">
                         </div>
                         <div class="semi-fixed-right semi-wide-40">
                             <span class="btn"><i class="fa fa-chevron-right text-gray-light"></i></span>
@@ -191,10 +191,10 @@
                     <div class="section large">
                         <div class="semi-auto semi-left-80">
                             <div class="semi-fixed-left text-center">
-                                日期：
+                                {{"Date" | translate}}：
                             </div>
                             <div style="padding-bottom:8px;">
-                                <p>{{input.from_date | date:"yyyy-MM-dd"}}<span class="btn"></span>{{input.from_time | date:"HH:mm"}} 至</p>
+                                <p>{{input.from_date | date:"yyyy-MM-dd"}}<span class="btn"></span>{{input.from_time | date:"HH:mm"}} {{"TO"|translate}}</p>
                                 {{input.to_date | date:"yyyy-MM-dd"}}<span class="btn"></span>{{input.to_time | date:"HH:mm"}}
                             </div>
                             <div class="kk-line kk-horizon bg-gray-lighter"></div>
@@ -225,7 +225,7 @@
                     <div class="section large" style="padding-bottom:0">
                         <div class="semi-auto semi-left-80">
                             <div class="semi-fixed-left text-center">
-                                总价格：
+                                {{"Total price" | translate}}：
                             </div>
                             <div style="padding-bottom:8px;">
                                 {{input.total}}
@@ -273,7 +273,7 @@
                         <i class="fa fa-chevron-left" style="position:relative;top:3px"></i>
                     </div>
                     <span class="pull-right" style="position:relative;top:3px" ui-turn-off="district_panel">{{"Save" | translate}}</span>
-                    <h4 class="modal-title text-center">选择地区</h4>
+                    <h4 class="modal-title text-center">{{"Place"| translate}}</h4>
                 </div>
                 <div class="modal-body" style="padding:0">
                     <div class="country">
@@ -301,12 +301,9 @@
                 <div class="modal-header">
                     <h4 class="modal-title">{{tips}}</h4>
                 </div>
-                <!-- <div class="modal-body">
-                    <p>恭喜,你的申请已经发送，是否创建任务！</p>
-                </div> -->
                 <div class="modal-footer text-center">
-                    <button class="btn btn-default" ng-click="close()">不创建，返回</button>
-                    <button class="btn btn-primary" ng-click="create()">创建</button>
+                    <button class="btn btn-default" ng-click="close()">{{"Not Create,Back" | translate}}</button>
+                    <button class="btn btn-primary" ng-click="create()">{{"Create" | translate}}</button>
                 </div>
             </div>
         </div>
