--- a/src/templates/contact.html
+++ b/src/templates/contact.html
@@ -1,5 +1,5 @@
 <!-- by dribehance <dribehance.kksdapp.com> -->
-<div ui-content-for="title">联系我们</div>
+<div ui-content-for="title">{{"Contact Us" | translate}}</div>
 <div ui-content-for="navbarAction"></div>
 <div ui-content-for="backAction">
     <span class="btn" ng-click="back()"><i class="fa fa-chevron-left"></i></span>
@@ -9,13 +9,13 @@
         <div class="section large">
             <form name="contactForm" ng-submit="ajaxForm()">
                 <p class="btn-group justified">
-                    <label class="btn btn-default text-ellipsis" ng-class="{'active':input.issue == 'issue_1'}"><input type="radio" class="hide" ng-model="input.issue" value="issue_1">审核认证</label>
-                    <label class="btn btn-default text-ellipsis" ng-class="{'active':input.issue == 'issue_2'}"><input type="radio" class="hide" ng-model="input.issue" value="issue_2">支付问题</label>
-                    <label class="btn btn-default text-ellipsis" ng-class="{'active':input.issue == 'issue_3'}"><input type="radio" class="hide" ng-model="input.issue" value="issue_3">结算问题</label>
+                    <label class="btn btn-default text-ellipsis" ng-class="{'active':input.issue == 'issue_1'}"><input type="radio" class="hide" ng-model="input.issue" value="issue_1">{{"Authentication" | translate}}</label>
+                    <label class="btn btn-default text-ellipsis" ng-class="{'active':input.issue == 'issue_2'}"><input type="radio" class="hide" ng-model="input.issue" value="issue_2">{{"Payment"| translate}}</label>
+                    <label class="btn btn-default text-ellipsis" ng-class="{'active':input.issue == 'issue_3'}"><input type="radio" class="hide" ng-model="input.issue" value="issue_3">{{"Settlement" | translate}}</label>
                 </p>
                 <p class="btn-group justified">
-                    <label class="btn btn-default text-ellipsis" ng-class="{'active':input.issue == 'issue_4'}"><input type="radio" class="hide" ng-model="input.issue" value="issue_4">市场活动</label>
-                    <label class="btn btn-default text-ellipsis" ng-class="{'active':input.issue == 'issue_5'}"><input type="radio" class="hide" ng-model="input.issue" value="issue_5">其他</label>
+                    <label class="btn btn-default text-ellipsis" ng-class="{'active':input.issue == 'issue_4'}"><input type="radio" class="hide" ng-model="input.issue" value="issue_4">{{"Events" | translate}}</label>
+                    <label class="btn btn-default text-ellipsis" ng-class="{'active':input.issue == 'issue_5'}"><input type="radio" class="hide" ng-model="input.issue" value="issue_5">{{"Others"| translate}}</label>
                 </p>
                 <p>
                     <textarea class="form-control" rows="10" placeholder="{{ 'Please briefly describe your business and advertisement needs here. We will get back to you soon.'| translate}}" name="issue_content" ng-model="input.issue_content" required></textarea>
